Code cleanup; begin injection work
Have not tested if this works yet

--- a/src/JoelRichPodcast/JoelRichPodcast.csproj
+++ b/src/JoelRichPodcast/JoelRichPodcast.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <None Include="App.default.config" />
     <None Include="App.config" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Services\JoelRichFeedGenerator.cs">
       <AutoGen>false</AutoGen>
       <DesignTimeSharedInput>false</DesignTimeSharedInput>
