--- a/src/JoelRichPodcast/JoelRichPodcast.csproj
+++ b/src/JoelRichPodcast/JoelRichPodcast.csproj
@@ -40,6 +40,14 @@
     <Reference Include="PodcastRssGenerator4DotNet">
       <HintPath>..\packages\PodcastRssGenerator4DotNet.1.5.0\lib\PodcastRssGenerator4DotNet.dll</HintPath>
     </Reference>
+    <Reference Include="StructureMap, Version=4.1.2.386, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.4.1.2.386\lib\net40\StructureMap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StructureMap.Net4, Version=4.1.2.386, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.4.1.2.386\lib\net40\StructureMap.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -50,6 +58,7 @@
     <None Include="App.default.config" />
     <None Include="App.config" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Services\JoelRichFeedGetter.cs" />
     <Compile Include="Services\JoelRichFeedGenerator.cs">
       <AutoGen>false</AutoGen>
       <DesignTimeSharedInput>false</DesignTimeSharedInput>
