--- a/src/JoelRichPodcast/packages.config
+++ b/src/JoelRichPodcast/packages.config
@@ -3,5 +3,5 @@
   <package id="ConfigReader" version="1.2" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="PodcastRssGenerator4DotNet" version="1.5.0" targetFramework="net45" />
-  <package id="SimpleInjector" version="3.1.2" targetFramework="net45" />
+  <package id="structuremap" version="4.1.2.386" targetFramework="net45" />
 </packages>
