--- a/src/JoelRichPodcast/packages.config
+++ b/src/JoelRichPodcast/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="ConfigReader" version="1.2" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="PodcastRssGenerator4DotNet" version="1.5.0" targetFramework="net45" />
